# VocalScript

./: .gitignore  README.md  pyproject.toml  requirements.txt  vocalscript.spec
.github/ISSUE_TEMPLATE/: bug-report---.md
.github/workflows/: ci.yml
scripts/: build.py
setup/: build.py
src/: azure_service.py  exceptions.py  main.py  settings.py  speech_synthesis.py  std_logger.py  utils.py
src/services/: azure.py  chatterbox.py  clone_service.py  kokoro.py  ssml_service.py  tts_service.py
src/widgets/: input.py  main_window.py  settings.py  status_bar.py  task_worker.py  voice_selector.py
