[project]
name = "vocalscript"
version = "0.1.0"
description = "A TTS app"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "azure-cognitiveservices-speech>=1.44.0",
    "pyside6>=6.9.1",
]

[dependency-groups]
dev = [
    "nuitka>=2.7.10",
    "patchelf>=0.17.2.2 ; sys_platform == 'linux'",
]
