[project]
name = "vocalscript"
version = "0.1.0"
description = "A TTS app"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "azure-cognitiveservices-speech>=1.44.0",
    "en-core-web-sm",
    "en-core-web-trf",
    "huggingface-hub>=0.33.2",
    "kokoro>=0.9.4",
    "misaki[ja,zh]>=0.9.4",
    "playsound3>=3.2.4",
    "pyside6>=6.9.1",
    "soundfile>=0.13.1",
    "torch>=2.7.1",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.14.2",
]

[tool.uv.sources]
torch = [
   { index = "pytorch-cpu" },
 ]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
en-core-web-trf = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_trf-3.8.0/en_core_web_trf-3.8.0-py3-none-any.whl" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
